[project]
name = "cuda-pi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brandon Yang", email = "jqm9ba@virginia.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "torch==2.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
cuda-pi = "cuda_pi:main"

[build-system]
requires = ["setuptools>=61", "torch==2.5.1"]
build-backend = "setuptools.build_meta"
